started to adapt Nick's original cv into my own version

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: "Riccardo Esclapon's Resume"
+author: Riccardo Esclapon
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -27,7 +27,7 @@ library(glue)
 using_googlesheets <- TRUE
 
 # Just the copied URL from the sheet
-positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc"
+positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/1lKNWy2etJRj_4Q5yPmWiKk8LO7wElhBliZ-90j2ABX4"
 
 # Is this sheet available for anyone to read? If you're using a private sheet
 # set this to false and go to gather_data.R and run the data loading manually
@@ -109,7 +109,7 @@ All projects available at `github.com/nstrayer/<name>`
 More info {#more-info}
 --------------------------------------------------------------------------------
 
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
+Enter more 
 
 
 Disclaimer {#disclaimer}
@@ -117,7 +117,8 @@ Disclaimer {#disclaimer}
 
 Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Original source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+(this resume was created by forking **Nick Strayer's** repository)
 
 Last updated on `r Sys.Date()`.
 
@@ -126,7 +127,7 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Riccardo Esclapon {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
@@ -144,7 +145,7 @@ position_data %>% print_section('education')
 
 
 
-Selected Positions {data-icon=suitcase}
+Positions {data-icon=suitcase}
 --------------------------------------------------------------------------------
 
 ```{r}
@@ -153,11 +154,11 @@ position_data %>% print_section('positions')
 
 
 
-Selected Writing {data-icon=newspaper}
---------------------------------------------------------------------------------
+<!-- Selected Writing {data-icon=newspaper} -->
+<!-- -------------------------------------------------------------------------------- -->
 
-```{r}
-position_data %>% print_section('writings')
-```
+<!-- ```{r} -->
+<!-- position_data %>% print_section('writings') -->
+<!-- ``` -->
 
 
