updated pdf download button

--- a/index.Rmd
+++ b/index.Rmd
@@ -40,8 +40,8 @@ sheet_is_publicly_readable <- TRUE
 PDF_EXPORT <- FALSE
 
 
-CV_PDF_LOC <- "https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf"
-CV_HTML_LOC <- "nickstrayer.me/cv/"
+CV_PDF_LOC <- "https://github.com/ries9112/cv/blob/master/esclapon_cv.pdf"
+CV_HTML_LOC <- "https://ricky-cv.netlify.com/"
 
 
 # A global (gasp) variable that holds all the links that were inserted for
