finalized resume + cv

--- a/index.Rmd
+++ b/index.Rmd
@@ -127,7 +127,7 @@ Riccardo Esclapon {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-print_text_block(text_blocks, 'intro')
+print_text_block(text_blocks, 'intro_full')
 ```
 
 
