--- a/resume.Rmd
+++ b/resume.Rmd
@@ -27,7 +27,7 @@ library(glue)
 using_googlesheets <- TRUE
 
 # Just the copied URL from the sheet
-positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/1lKNWy2etJRj_4Q5yPmWiKk8LO7wElhBliZ-90j2ABX4"
+positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/1lKNWy2etJRj_4Q5yPmWiKk8LO7wElhBliZ-90j2ABX4/"
 
 # Is this sheet available for anyone to read? If you're using a private sheet
 # set this to false and go to gather_data.R and run the data loading manually
@@ -37,7 +37,7 @@ sheet_is_publicly_readable <- TRUE
 # Is the goal of this knit to build a document that is exported to PDF? If so
 # set this to true to have links turned into footnotes at the end of the
 # document
-PDF_EXPORT <- FALSE
+PDF_EXPORT <- TRUE
 
 
 # A global (gasp) variable that holds all the links that were inserted for
@@ -101,6 +101,12 @@ Certifications {#edit-section}
 I have done a fair amount of self-learning beyond my formal education:
 
 [resclapon.com/certifications](https://resclapon.com/certifications)
+
+
+CV {#CV}
+--------------------------------------------------------------------------------
+
+[Click here to view the longer CV](https://raw.githubusercontent.com/ries9112/cv/master/esclapon_cv.pdf)
 
 
 Disclaimer {#disclaimer}
